[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 100
max-complexity = 15
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "venv",
]
select = ["E", "F", "W", "C"]  # Error, Failure, Warning, Complexity
ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black)
    "W503",  # Line break before binary operator
]